--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -11,8 +11,8 @@
       <div class="hidden md:flex items-center space-x-8">
         <a href="#inicio" class="text-paragraph hover:text-primary transition-colors font-medium">Inicio</a>
         <a href="#nosotros" class="text-paragraph hover:text-primary transition-colors font-medium">Nosotros</a>
-        <a href="#servicios" class="text-paragraph hover:text-primary transition-colors font-medium">Servicios/Fabricación</a>
-                <a href="#productos" class="text-paragraph hover:text-primary transition-colors font-medium">NuestrosProductos</a>
+        <a href="#servicios" class="text-paragraph hover:text-primary transition-colors font-medium">Fabricación</a>
+                <a href="#productos" class="text-paragraph hover:text-primary transition-colors font-medium">Productos</a>
         <a href="#nuestros-servicios" class="text-paragraph hover:text-primary transition-colors font-medium"> Servicios</a>
       
 
