--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -34,7 +34,7 @@ const services = [
   },
 
   {
-    title: "FabricaciónEstructura Metálica ",
+    title: "Fabricacion de Estructura Metálica ",
     image: "images/productos/a5.jpg",
     description: "Fabricación de estructuras metálicas menores para proyectos industriales.",
     features: [
@@ -42,13 +42,13 @@ const services = [
     ]
   },
   {
-    title: "Preparación de equipos con estándar minero",
-    image: "images/productos/a6.jpg",
-    description: "Preparación de equipos con estándar minero.",
+    title: "Placa Calibradora piping.",
+    image: "/images/productos/b2.jpg",
+    description: "Placa Calibradora piping especializada para aplicaciones de piping.",
     features: [
-      "Preparamos equipos, camiones, maquinarias con estándar minero según necesidad de la campañia"
+      "Placa Calibradora piping especializada para aplicaciones de piping.",
     ]
-  }
+  },
 
   
 ];
@@ -85,6 +85,14 @@ const serviciosAdicionales = [
       "Motosoldadoras",
       "Tiendetubos",
       "Excavadoras, etc."
+    ]
+  },
+  {
+    title: "Preparación de equipos con estándar minero",
+    image: "images/productos/a6.jpg",
+    description: "Preparación de equipos con estándar minero.",
+    features: [
+      "Preparamos equipos, camiones, maquinarias con estándar minero según necesidad de la campañia"
     ]
   }
 ];
