--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Contact from '../components/Contact.astro';
 import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="SERGEN - Especialistas en Construcción Industrial y Montaje">
+<Layout title="SERGEN - Proveedor Industrial Especialista">
   <TopHeader />
   <Header />
   <main>
